### Added

- Added "Disable empty items" option in the MOP settings, under Other section
  - Objects that are marked as "empty" by the game (like used coolant bottles) are automatically disabled
- Stolen machine slot now despawns
- Pedastrians NPCs now despawn
- Added new console command `mop generate-list [true/false]` - it generates the list of what items are despawned by MOP (useful for mod makers that want to create rule files for their mods)
- If the Custom.txt rule file is present, the content of it will be showed in MOP log and mod report
- Added experimental save file optimization (disabled by default)
  - WARNING: This is a highly experimental function, I recommend making your own backup of entire save folder! **USE ONLY AT YOUR OWN RISK!**
  - Can reduce the save file size, from 10% to 30% (depending on how old is the save file)
  - Should reduce the load time (especially for older saves)
  - You can enable it using flag "experimental_save_optimization" in the custom rule file
  - MOP generates a save (defaultES2File and items) backup on each save with ".mopbackup" suffix (ex. defaultES2File.txt.mopbackup)
  - If something wrong has happened to your save, you can issue command "mop restore-save", that restores last save backup

### Changes

- (My Summer Car) Restocking now works no matter the player's distance to the store (previously, if player was too close to the store, the restocking script wouldn't trigger)
- Optimized how anti bolt resetting script works
- Renamed "Open last log" to "Open last MOP log" in the MOP settings, to avoid confusion
- MOP will not check if the server is online on each menu opening, reducing the main menu load time if you're offline
- Minor performance enhancements
- Minor changes to console outputs

### Bug Fixes
